--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,15 @@
 language: C++
 
+matrix:
+  include:
+    - os: linux
+      dist: trusty
+      sudo: required
+    - os: osx
+      osx_image: xcode7.3
+
 before_install:
-  - uname -a
-  - df -h
-  - free -h
+  - ./setup.sh
+
+script:
+  - ./build.sh
