apply extra_args for m76 on linux

--- a/config.json
+++ b/config.json
@@ -82,7 +82,7 @@
 	},
 	{
 	    "chrome_version" : 76,
-            "extra_args" : ["rtc_include_opus=false", "rtc_enable_protobuf=false", "rtc_build_json=false",
+            "extra_args" : ["rtc_include_opus=false", "rtc_enable_protobuf=false",
                             "rtc_build_opus=false", "rtc_use_lto=true"]
         }
     ],
@@ -95,6 +95,7 @@
 	    "exclude_objs" : [
 		"obj/webrtc/examples"
 	    ],
+	    "extra_args" : [],
 	    "extra_objs" : [],
 	    "rename_objs" : {
 		"libdl.a" : "libopenmax_dl.a"
@@ -124,6 +125,12 @@
 	{
 	    "chrome_version" : 71,
 	    "rename_objs" : {}
+	},
+	{
+	    "chrome_version" : 76,
+	    "header_root_path" : "src",
+            "extra_args" : ["rtc_include_opus=false", "rtc_enable_protobuf=false",
+                            "rtc_build_opus=false", "rtc_use_lto=true"]
 	}
     ]
 }
