--- a/config.json
+++ b/config.json
@@ -83,9 +83,8 @@
 	{
 	    "chrome_version" : 76,
             "extra_args" : ["rtc_include_opus=false", "rtc_enable_protobuf=false",
-			    "rtc_build_json=false",
-                            "rtc_build_opus=false", "rtc_use_lto=true", "use_sysroot=false",
-			    "use_custom_libcxx=false"]
+			    "rtc_build_json=false", "rtc_build_opus=false", "rtc_use_lto=true",
+			    "use_sysroot=false", "use_custom_libcxx=false"]
         }
     ],
     "ubuntu" : [
@@ -132,7 +131,8 @@
 	    "chrome_version" : 76,
 	    "header_root_path" : "src",
             "extra_args" : ["rtc_include_opus=false", "rtc_enable_protobuf=false",
-                            "rtc_build_opus=false", "rtc_use_lto=true"]
+                            "rtc_build_opus=false", "rtc_use_lto=true", 
+			    "use_sysroot=false", "use_custom_libcxx=false"]
 	}
     ]
 }
