--- a/config.json
+++ b/config.json
@@ -1,138 +1,160 @@
 {
-    "chrome_os_map" : {
-	"macos" : "mac",
-	"ubuntu" : "linux"
-    },
-    "macos" : [
-	{
-	    "chrome_version" : 0,
-	    "build_targets" : ["AppRTCDemo"],
-	    "ninja_file" : "obj/webrtc/examples/AppRTCDemo_executable.ninja",
-	    "ninja_target" : "obj/webrtc/examples/AppRTCDemo_executable/AppRTCDemo:",
-	    "exclude_objs" : [
-		"obj/webrtc/examples"
-	    ],
-            "extra_args" : [],
-	    "extra_objs" : [],
-	    "rename_objs" : {
-		"libdl.a" : "libopenmax_dl.a"
-	    },
-	    "header_root_path" : "src/webrtc",
-	    "exclude_headers" : [
-		"build",
-		"buildtools",
-		"tools_webrtc",
-		"examples"
-	    ],
-	    "archive_name" : "libwebrtc-{chrome_version}-macosx-{os_version}.zip",
-	    "mime_type" : "application/zip"
+	"chrome_os_map": {
+		"macos": "mac",
+		"ubuntu": "linux"
 	},
-	{
-	    "chrome_version" : 57,
-	    "build_targets" : ["AppRTCMobile"],
-	    "ninja_file" : "obj/webrtc/examples/AppRTCMobile_executable.ninja",
-	    "ninja_target" : "obj/webrtc/examples/AppRTCMobile_executable/AppRTCMobile"
-	},
-	{
-	    "chrome_version" : 63,
-	    "build_targets" : ["AppRTCMobile"],
-	    "ninja_file" : "obj/examples/AppRTCMobile_executable.ninja",
-	    "ninja_target" : "obj/examples/AppRTCMobile_executable/AppRTCMobile",
-	    "exclude_objs" : [
-		"obj/examples"
-	    ],
-	    "header_root_path" : "src"
-	},
-	{
-	    "chrome_version" : 71,
-	    "build_targets" : [
-		"obj/sdk/mac_framework_objc_shared_library/WebRTC",
-		"obj/api/video_codecs/libbuiltin_video_encoder_factory.a",
-		"obj/api/video_codecs/libbuiltin_video_decoder_factory.a"
-	    ],
-	    "ninja_file" : "obj/sdk/mac_framework_objc_shared_library.ninja",
-	    "ninja_target" : "mac_framework_objc_shared_library/WebRTC",
-	    "exclude_objs" : [],
-	    "extra_objs" : [
-		"obj/api/video_codecs/libbuiltin_video_encoder_factory.a",
-		"obj/api/video_codecs/libbuiltin_video_decoder_factory.a"
-	    ],
-	    "rename_objs" : {},
-	    "header_root_path" : "src"
-	},
-	{
-	    "chrome_version" : 75,
-	    "build_targets" : [
-		"obj/sdk/mac_framework_objc_shared_library/WebRTC",
-		"obj/api/video_codecs/libbuiltin_video_encoder_factory.a",
-		"obj/api/video_codecs/libbuiltin_video_decoder_factory.a"
-	    ],
-	    "ninja_file" : "obj/sdk/mac_framework_objc_shared_library.ninja",
-	    "ninja_target" : "mac_framework_objc_shared_library/WebRTC",
-	    "exclude_objs" : [],
-	    "extra_objs" : [
-		"obj/api/video_codecs/libbuiltin_video_encoder_factory.a",
-		"obj/api/video_codecs/libbuiltin_video_decoder_factory.a",
-		"obj/media/librtc_encoder_simulcast_proxy.a",
-		"obj/media/librtc_simulcast_encoder_adapter.a",
-		"obj/media/librtc_internal_video_codecs.a"
-	    ],
-	    "rename_objs" : {},
-	    "header_root_path" : "src"
-	},
-	{
-	    "chrome_version" : 76,
-            "extra_args" : ["rtc_include_opus=false", "rtc_enable_protobuf=false",
-			    "rtc_build_json=false", "rtc_build_opus=false", "rtc_use_lto=true",
-			    "use_sysroot=false", "use_custom_libcxx=false"]
-        }
-    ],
-    "ubuntu" : [
-	{
-	    "chrome_version" : 0,
-	    "build_targets" : ["peerconnection_client"],
-	    "ninja_file" : "obj/webrtc/examples/peerconnection_client.ninja",
-	    "ninja_target" : "peerconnection_client:",
-	    "exclude_objs" : [
-		"obj/webrtc/examples"
-	    ],
-	    "extra_args" : [],
-	    "extra_objs" : [],
-	    "rename_objs" : {
-		"libdl.a" : "libopenmax_dl.a"
-	    },
-	    "header_root_path" : "src/webrtc",
-	    "exclude_headers" : [
-		"build",
-		"buildtools",
-		"out",
-		"test",
-		"testing",
-		"tools_webrtc",
-		"examples"
-	    ],
-	    "archive_name" : "libwebrtc-{chrome_version}-ubuntu-{os_version}-{arch}.tar.gz",
-	    "mime_type" : "application/x-gzip",
-	    "arch" : ["x64", "x86"]
-	},
-	{
-	    "chrome_version" : 63,
-	    "ninja_file" : "obj/examples/peerconnection_client.ninja",
-	    "exclude_objs" : [
-		"obj/examples"
-	    ],
-	    "header_root_path" : "src"
-	},
-	{
-	    "chrome_version" : 71,
-	    "rename_objs" : {}
-	},
-	{
-	    "chrome_version" : 76,
-	    "header_root_path" : "src",
-            "extra_args" : ["rtc_include_opus=false", "rtc_enable_protobuf=false",
-                            "rtc_build_opus=false", "rtc_use_lto=true", 
-			    "use_sysroot=false", "use_custom_libcxx=false"]
-	}
-    ]
+	"macos": [
+		{
+			"chrome_version": 0,
+			"build_targets": [
+				"AppRTCDemo"
+			],
+			"ninja_file": "obj/webrtc/examples/AppRTCDemo_executable.ninja",
+			"ninja_target": "obj/webrtc/examples/AppRTCDemo_executable/AppRTCDemo:",
+			"exclude_objs": [
+				"obj/webrtc/examples"
+			],
+			"extra_args": [],
+			"extra_objs": [],
+			"rename_objs": {
+				"libdl.a": "libopenmax_dl.a"
+			},
+			"header_root_path": "src/webrtc",
+			"exclude_headers": [
+				"build",
+				"buildtools",
+				"tools_webrtc",
+				"examples"
+			],
+			"archive_name": "libwebrtc-{chrome_version}-macosx-{os_version}.zip",
+			"mime_type": "application/zip"
+		},
+		{
+			"chrome_version": 57,
+			"build_targets": [
+				"AppRTCMobile"
+			],
+			"ninja_file": "obj/webrtc/examples/AppRTCMobile_executable.ninja",
+			"ninja_target": "obj/webrtc/examples/AppRTCMobile_executable/AppRTCMobile"
+		},
+		{
+			"chrome_version": 63,
+			"build_targets": [
+				"AppRTCMobile"
+			],
+			"ninja_file": "obj/examples/AppRTCMobile_executable.ninja",
+			"ninja_target": "obj/examples/AppRTCMobile_executable/AppRTCMobile",
+			"exclude_objs": [
+				"obj/examples"
+			],
+			"header_root_path": "src"
+		},
+		{
+			"chrome_version": 71,
+			"build_targets": [
+				"obj/sdk/mac_framework_objc_shared_library/WebRTC",
+				"obj/api/video_codecs/libbuiltin_video_encoder_factory.a",
+				"obj/api/video_codecs/libbuiltin_video_decoder_factory.a"
+			],
+			"ninja_file": "obj/sdk/mac_framework_objc_shared_library.ninja",
+			"ninja_target": "mac_framework_objc_shared_library/WebRTC",
+			"exclude_objs": [],
+			"extra_objs": [
+				"obj/api/video_codecs/libbuiltin_video_encoder_factory.a",
+				"obj/api/video_codecs/libbuiltin_video_decoder_factory.a"
+			],
+			"rename_objs": {},
+			"header_root_path": "src"
+		},
+		{
+			"chrome_version": 75,
+			"build_targets": [
+				"obj/sdk/mac_framework_objc_shared_library/WebRTC",
+				"obj/api/video_codecs/libbuiltin_video_encoder_factory.a",
+				"obj/api/video_codecs/libbuiltin_video_decoder_factory.a"
+			],
+			"ninja_file": "obj/sdk/mac_framework_objc_shared_library.ninja",
+			"ninja_target": "mac_framework_objc_shared_library/WebRTC",
+			"exclude_objs": [],
+			"extra_objs": [
+				"obj/api/video_codecs/libbuiltin_video_encoder_factory.a",
+				"obj/api/video_codecs/libbuiltin_video_decoder_factory.a",
+				"obj/media/librtc_encoder_simulcast_proxy.a",
+				"obj/media/librtc_simulcast_encoder_adapter.a",
+				"obj/media/librtc_internal_video_codecs.a"
+			],
+			"rename_objs": {},
+			"header_root_path": "src"
+		},
+		{
+			"chrome_version": 76,
+			"extra_args": [
+				"rtc_include_opus=false",
+				"rtc_enable_protobuf=false",
+				"rtc_build_json=false",
+				"rtc_build_opus=false",
+				"rtc_use_lto=true",
+				"use_sysroot=false",
+				"use_custom_libcxx=false"
+			]
+		}
+	],
+	"ubuntu": [
+		{
+			"chrome_version": 0,
+			"build_targets": [
+				"peerconnection_client"
+			],
+			"ninja_file": "obj/webrtc/examples/peerconnection_client.ninja",
+			"ninja_target": "peerconnection_client:",
+			"exclude_objs": [
+				"obj/webrtc/examples"
+			],
+			"extra_args": [],
+			"extra_objs": [],
+			"rename_objs": {
+				"libdl.a": "libopenmax_dl.a"
+			},
+			"header_root_path": "src/webrtc",
+			"exclude_headers": [
+				"build",
+				"buildtools",
+				"out",
+				"test",
+				"testing",
+				"tools_webrtc",
+				"examples"
+			],
+			"archive_name": "libwebrtc-{chrome_version}-ubuntu-{os_version}-{arch}.tar.gz",
+			"mime_type": "application/x-gzip",
+			"arch": [
+				"x64",
+				"x86"
+			]
+		},
+		{
+			"chrome_version": 63,
+			"ninja_file": "obj/examples/peerconnection_client.ninja",
+			"exclude_objs": [
+				"obj/examples"
+			],
+			"header_root_path": "src"
+		},
+		{
+			"chrome_version": 71,
+			"rename_objs": {}
+		},
+		{
+			"chrome_version": 76,
+			"header_root_path": "src",
+			"extra_args": [
+				"rtc_include_opus=false",
+				"rtc_enable_protobuf=false",
+				"rtc_build_opus=false",
+				"rtc_use_lto=true",
+				"use_sysroot=false",
+				"use_custom_libcxx=false"
+			]
+		}
+	]
 }
