--- a/configs/linux_i386.yml
+++ b/configs/linux_i386.yml
@@ -3,6 +3,7 @@ BuildDepsOpts:
 - '--no-arm'
 - '--no-chromeos-fonts'
 - '--no-nacl'
+SysrootArch: x86
 GnOpts:
 - 'libyuv_disable_jpeg=true'
 - 'rtc_build_opus=false'
@@ -17,7 +18,7 @@ GnOpts:
 - 'rtc_use_dummy_audio_file_devices=true'
 - 'rtc_use_gtk=false'
 - 'rtc_use_x11=false'
-- 'target_cpu="x64"'
+- 'target_cpu="x86"'
 - 'target_os="linux"'
 - 'use_custom_libcxx=false'
 - 'use_libjpeg_turbo=false'
