--- a/configs/linux_amd64.yml
+++ b/configs/linux_amd64.yml
@@ -31,13 +31,14 @@ ExcludeFiles:
 - 'obj/examples'
 - 'obj/test'
 Headers:
+# see https://webrtc.googlesource.com/src/+/master/native-api.md for maintenance
 - 'common_audio/include'
 - 'media/base'
 - 'media/engine'
 - 'modules/audio_coding/include'
 - 'modules/audio_device/include'
 - 'modules/audio_processing/include'
-#- 'modules/bitrate_controller/include'
+# - 'modules/bitrate_controller/include'
 - 'modules/congestion_controller/include'
 - 'modules/include'
 - 'modules/remote_bitrate_estimator/include'
@@ -49,15 +50,18 @@ Headers:
 - 'modules/video_coding/codecs/vp9/include'
 - 'modules/video_coding/include'
 - 'pc'
-#- 'rtc_base'
+# - 'rtc_base'
 - 'system_wrappers/include'
 # add by myself
 - '.'
 - 'call'
 - 'common_video/include'
+- 'common_video/generic_frame_descriptor'
 - 'logging/rtc_event_log'
 - 'logging/rtc_event_log/events'
 - 'modules/rtp_rtcp/source/rtcp_packet'
+- 'modules/video_coding'
+- 'modules/video_coding/codecs/interface'
 - 'p2p/base'
 HeadersWithSubdir:
 - 'api'
