update branch name
Signed-off-by: Yuji Ito <llamerada.jp@gmail.com>

--- a/configs/linux_amd64.yml
+++ b/configs/linux_amd64.yml
@@ -4,6 +4,7 @@ BuildDepsOpts:
 - '--no-chromeos-fonts'
 - '--no-nacl'
 GnOpts:
+- 'enable_libaom=false'
 - 'libyuv_disable_jpeg=true'
 - 'rtc_build_opus=false'
 - 'rtc_enable_protobuf=false'
@@ -15,7 +16,6 @@ GnOpts:
 - 'rtc_include_opus=false'
 - 'rtc_include_pulse_audio=false'
 - 'rtc_use_dummy_audio_file_devices=true'
-- 'rtc_use_gtk=false'
 - 'rtc_use_x11=false'
 - 'target_cpu="x64"'
 - 'target_os="linux"'
@@ -38,10 +38,8 @@ Headers:
 - 'modules/audio_coding/include'
 - 'modules/audio_device/include'
 - 'modules/audio_processing/include'
-# - 'modules/bitrate_controller/include'
 - 'modules/congestion_controller/include'
 - 'modules/include'
-- 'modules/remote_bitrate_estimator/include'
 - 'modules/rtp_rtcp/include'
 - 'modules/rtp_rtcp/source'
 - 'modules/utility/include'
@@ -50,21 +48,21 @@ Headers:
 - 'modules/video_coding/codecs/vp9/include'
 - 'modules/video_coding/include'
 - 'pc'
-# - 'rtc_base'
 - 'system_wrappers/include'
 # add by myself
-- '.'
 - 'call'
 - 'common_video'
 - 'common_video/include'
 - 'common_video/generic_frame_descriptor'
 - 'logging/rtc_event_log'
 - 'logging/rtc_event_log/events'
+- 'logging/rtc_event_log/encoder'
 - 'modules/async_audio_processing'
 - 'modules/rtp_rtcp/source/rtcp_packet'
 - 'modules/video_coding'
 - 'modules/video_coding/codecs/interface'
 - 'p2p/base'
+- 'video/config'
 HeadersWithSubdir:
 - 'api'
 # add by myself
