--- a/configs/macos_amd64.yml
+++ b/configs/macos_amd64.yml
@@ -32,10 +32,8 @@ Headers:
 - 'modules/audio_coding/include'
 - 'modules/audio_device/include'
 - 'modules/audio_processing/include'
-# - 'modules/bitrate_controller/include'
 - 'modules/congestion_controller/include'
 - 'modules/include'
-- 'modules/remote_bitrate_estimator/include'
 - 'modules/rtp_rtcp/include'
 - 'modules/rtp_rtcp/source'
 - 'modules/utility/include'
@@ -44,21 +42,21 @@ Headers:
 - 'modules/video_coding/codecs/vp9/include'
 - 'modules/video_coding/include'
 - 'pc'
-# - 'rtc_base'
 - 'system_wrappers/include'
 # add by myself
-- '.'
 - 'call'
 - 'common_video'
 - 'common_video/include'
 - 'common_video/generic_frame_descriptor'
 - 'logging/rtc_event_log'
 - 'logging/rtc_event_log/events'
+- 'logging/rtc_event_log/encoder'
 - 'modules/async_audio_processing'
 - 'modules/rtp_rtcp/source/rtcp_packet'
 - 'modules/video_coding'
 - 'modules/video_coding/codecs/interface'
 - 'p2p/base'
+- 'video/config'
 HeadersWithSubdir:
 - 'api'
 # add by myself
